crates/escalier_parser/src/snapshots/escalier_parser__tests__destructuring-9.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let foo = ({a, b}: {a: string, b: number}) => b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 48,
                    },
                },
                span: 0..48,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 7,
                        },
                    },
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 10,
                            },
                            end: Position {
                                line: 0,
                                column: 47,
                            },
                        },
                        span: 10..47,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 11,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 17,
                                                },
                                            },
                                            span: 11..17,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 12,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 13,
                                                                    },
                                                                },
                                                                span: 12..13,
                                                                ident: BindingIdent {
                                                                    name: "a",
                                                                    mutable: false,
                                                                    span: 12..13,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 12,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 13,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 15,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 16,
                                                                    },
                                                                },
                                                                span: 15..16,
                                                                ident: BindingIdent {
                                                                    name: "b",
                                                                    mutable: false,
                                                                    span: 15..16,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 15,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 16,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: Some(
                                            TypeAnn {
                                                kind: Object(
                                                    ObjectType {
                                                        elems: [
                                                            Prop(
                                                                TProp {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 20,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 29,
                                                                        },
                                                                    },
                                                                    span: 20..29,
                                                                    name: "a",
                                                                    optional: false,
                                                                    mutable: false,
                                                                    type_ann: TypeAnn {
                                                                        kind: Keyword(
                                                                            KeywordType {
                                                                                keyword: String,
                                                                            },
                                                                        ),
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 23,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 29,
                                                                            },
                                                                        },
                                                                        span: 23..29,
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ),
                                                            Prop(
                                                                TProp {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 31,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 40,
                                                                        },
                                                                    },
                                                                    span: 31..40,
                                                                    name: "b",
                                                                    optional: false,
                                                                    mutable: false,
                                                                    type_ann: TypeAnn {
                                                                        kind: Keyword(
                                                                            KeywordType {
                                                                                keyword: Number,
                                                                            },
                                                                        ),
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 34,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 40,
                                                                            },
                                                                        },
                                                                        span: 34..40,
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 19,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 41,
                                                    },
                                                },
                                                span: 19..41,
                                                inferred_type: None,
                                            },
                                        ),
                                        optional: false,
                                    },
                                ],
                                body: Block {
                                    span: 46..47,
                                    stmts: [
                                        Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 46,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 47,
                                                },
                                            },
                                            span: 46..47,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 46,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 47,
                                                        },
                                                    },
                                                    span: 46..47,
                                                    name: "b",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    ],
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
